Logging conflict docs